--- a/public/index.html
+++ b/public/index.html
@@ -12,10 +12,11 @@
     </style>
   </head>
   <body>
-    <div class="buttons">
+    <div class="buttons" id="buttons" style="display:none;">
       <label for="btnRhyme">Rhyme: <input type="range" id="btnRhyme" name="btnRhyme" value="Rhyme" min="0" max="100"></label>
       <label for="btnLeven">Leven: <input type="range" id="btnLeven" name="btnLeven" value="Leven" min="0" max="100"></label>
       <label for="btnSwap">Swap: <input type="checkbox" id="btnSwap" name="btnSwap" value="Swap"></label>
+      <label for="btnFavorRhymes">Favor Rhymes over Leven: <input type="checkbox" id="btnFavorRhymes" name="btnFavorRhymes" value="FavorRhymes"></label>
     </div>
     <div id="lyricsWrapper">
 
