proper top margin

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <title></title>
     <style>
       body {white-space: pre-line;font-family: sans-serif;line-height: 1.5;}
+      .lyricsWrapper {margin-top: 50px;}
       .subButtons {display: flex; align-items: stretch;}
       .buttons {display:flex;flex-direction: column;position: fixed; background: #AAA;left: 0; right: 0; top: 0;}
       .label {display:block; flex-grow: 1;padding: 5px 5px 2px;}
@@ -27,7 +28,7 @@
       </div>
       <label class="label master" for="btnMaster">Difficulty: <input type="range" id="btnMaster" name="btnMaster" value="Master" min="0" max="100"></label>
     </div>
-    <div id="lyricsWrapper">
+    <div class="lyricsWrapper" id="lyricsWrapper">
 
     </div>
   </body>
